@@ -1,5 +1,6 @@
 --------------------------
 Changes in 1.9 (not yet released)
+- Remove code to read boundingbox element in Collada reader as it's not in Collada specification.
 - .dae/Collade reader now converts from Collada's right-handed to Irrlicht's left handed coordinate system (switching z to -z)
 - Add irr::string::eraseTrailingFloatZeros to kick out trailing 0's for strings generated from floats.
 - .dae/Collada writer now converts from Irrlicht's left-handed to Collada's right-handed coordinate system (switching z to -z)
